Signed-off-by: Vikash Saini <vsai12@sapient.com>

--- a/ConfigService/src/main/resources/application.properties
+++ b/ConfigService/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 server.port=8888
 
-spring.cloud.config.server.git.uri=D:/Vikash-Repo/POCs/ConfigServiceProperties
-
-
+spring.cloud.config.server.git.uri=https://github.com/vikashsaini01/ConfigRepo.git
 
 
 message=hello World from Config Service property
