Signed-off-by: Vikash Saini <vsai12@sapient.com>

--- a/ConfigService/src/main/resources/application.properties
+++ b/ConfigService/src/main/resources/application.properties
@@ -1,6 +1,20 @@
-server.port=8888
-
+server.port=9091
 spring.cloud.config.server.git.uri=https://github.com/vikashsaini01/ConfigRepo.git
+
+
+spring.application.name=config-server
+
+
+eureka.client.region=default
+eureka.client.registryFetchIntervalSeconds=5
+eureka.client.serviceUrl.defaultZone=http://localhost:9092/eureka/
+
+
+
+
+
+
+
 
 
 message=hello World from Config Service property
